--- a/mfight-cannon.html
+++ b/mfight-cannon.html
@@ -4,14 +4,15 @@
 
 <script type="text/javascript">
 
-var w = 1500, h = 800;
-var ph = 20, pw = 5;
-var kh = 10, kw = 10;
-var common_spd = .4;
-var pbw = w/15,pbh = 3;
-var hpbw = w/3 ,hpbh= h/40;
-var eshieldlength = 20;
-var MAX_ESHIELD = 30 ;
+const w = 1500, h = 800;
+const ph = 20, pw = 5;
+const kh = 10, kw = 10;
+const common_spd = .4;
+const pbw = w/15,pbh = 3;
+const hpbw = w/3 ,hpbh= h/40;
+const eshieldlength = 20;
+const MAX_ESHIELD = 30 ;
+const Pi = Math.acos(-1);
 max = Math.max;
 min = Math.min;
 
@@ -702,9 +703,10 @@ function Land(x, y, l) {
 
 function Cannon(pos)
 {
-	this.x=pos.x+75;
-	this.y=pos.y;
-	this.ang=1;
+	this.x = pos.x+75;
+	this.y = pos.y;
+	this.ang = 0;
+	this.force = 0;
 
 	this.draw = () => {
 		cvs.fillStyle = colors.CANNON;
@@ -714,6 +716,16 @@ function Cannon(pos)
 		ll = new Line(new Position(this.x-Math.sin(this.ang)*1/2,this.y-Math.cos(this.ang)*1/2-10),new Position(this.x+Math.sin(this.ang)*3/2,this.y+Math.cos(this.ang)*3/2-10));
 		// console.log(ll.t.x,ll.t.y);
 		ll.draw(50);
+	}
+	this.turn_right = () => {
+		this.ang-=0.02*Pi;
+		if(this.ang<0)
+		{
+			this.ang+=Pi;
+		}
+	}
+	this.turn_left = () => {
+
 	}
 }
 
